[package]
name = "beacon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.2"
crypto = "0.5.1"
ring = "0.16.20"
serde = { version = "1.0.173", features=["derive"] }
tokio = { version="1.29.1", features=["full"] }
warp = "0.3.5"
