[package]
name = "beacon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.3"
futures = "0.3.28"
redis = { version = "0.23.0", features=["aio", "connection-manager", "tokio-comp", "async-std-comp"]}
ring = "0.16.20"
serde = { version = "1.0.173", features=["derive"] }
serde_json = "1.0.103"
tokio = { version="1.29.1", features=["full"] }
warp = "0.3.5"
