[package]
name = "valence"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
chrono = "0.4.26"
config = "0.13.3"
cuckoofilter = "0.5.0"
futures = "0.3.28"
hex = "0.4.3"
mongodb = "2.6.0"
rand = "0.8.5"
redis = { version = "0.23.0", features=["aio", "connection-manager", "tokio-comp", "async-std-comp"]}
ring = "0.16.20"
serde = { version = "1.0.173", features = ["derive"] }
serde_json = "1.0.103"
tokio = { version="1.29.1", features=["full"] }
tracing = "0.1.37"
warp = "0.3.5"
valence_core = "0.1.2" 
valence_market = "0.1.0"
